test_suite/tests/compile-fail/macros/sm/empty-machine.rs
#[macro_use]
extern crate sm_macro;

sm!{
    TurnStile {}
    //~^ ERROR no rules expected the token `}`
}
